objects/cwbtool__MetadataDictionary__c.object
<CustomObject>
    <fields>
        <fullName>cwbtool__BusinessRule__c</fullName>
        <label>Business Rule</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cwbtool__Compliance_Categorization__c</fullName>
        <label>Compliance Categorization</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CCPA</fullName>
                </value>
                <value>
                    <fullName>COPPA</fullName>
                </value>
                <value>
                    <fullName>GDPR</fullName>
                </value>
                <value>
                    <fullName>HIPAA</fullName>
                </value>
                <value>
                    <fullName>PCI</fullName>
                </value>
                <value>
                    <fullName>PersonalInfo</fullName>
                </value>
                <value>
                    <fullName>PII</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cwbtool__ComponentName__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__DataSource__c</fullName>
        <label>Data Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cwbtool__Data_Owner__c</fullName>
        <label>Data Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Data_Sensitivity_Level__c</fullName>
        <label>Data Sensitivity Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Confidential</fullName>
                </value>
                <value>
                    <fullName>Restricted</fullName>
                </value>
                <value>
                    <fullName>MissionCritical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cwbtool__Definition__c</fullName>
        <label>Definition</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cwbtool__FieldType__c</fullName>
        <label>Field Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Field_Usage__c</fullName>
        <label>Field Usage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>DeprecateCandidate</fullName>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cwbtool__GDPRDataType__c</fullName>
        <label>GDPR Data Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cwbtool__InternalDatabaseMapping__c</fullName>
        <label>Internal Database Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__LinktoTrailhead__c</fullName>
        <label>Link to Trailhead</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cwbtool__Parent__c</fullName>
        <label>Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cwbtool__Read_only_Field__c</fullName>
        <label>Read only Field?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cwbtool__Reporting_Field__c</fullName>
        <label>Reporting Field?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cwbtool__Requester__c</fullName>
        <label>Requester</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Object</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Metadata Dictionary</label>
    <nameField>
        <displayFormat>METAD-{0000}</displayFormat>
        <label>Metadata Dic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Dictionary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>